remove deprecated method and controller endpoint
